# recurrent-depth-experiments

experiments/: sparsity_check.ipynb  trajectory_analysis.ipynb
recdep/: pyproject.toml
recdep/src/recdep/: __init__.py
recdep/src/recdep/recpre/: __init__.py  config_dynamic.py  model_dynamic.py  raven_config_minimal.py  raven_modeling_minimal.py  settings.py
recdep/src/recdep/utils/: model.py
