[project]
name = "recdep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hprairie", email = "hprairie17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
recdep = "recdep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
